--- a/free-nodes/2025-6-5-node-share-links.htm
+++ b/free-nodes/2025-6-5-node-share-links.htm
@@ -161,6 +161,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-6-4-free-high-speed-nodes.htm">免费Clash SSR - 6月4日22.3M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-6-6-free-node-subscribe.htm">免费Clash SSR - 6月6日20M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -190,14 +191,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="免费Clash SSR - 5月31日20.7M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月31日20.7M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-subscribe-node.htm" title="免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-21-free-subscribe-node.htm" title="免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-23-free-high-speed-nodes.htm" title="免费Clash SSR - 5月23日18.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月23日18.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-28-free-subscribe-node.htm" title="免费Clash SSR - 5月28日22.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 5月28日22.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-24-free-subscribe-node.htm" title="免费Clash SSR - 5月24日19.9M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 5月24日19.9M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-3-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月3日20.7M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月3日20.7M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-26-free-subscribe-node.htm" title="免费Clash SSR - 5月26日21.5M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享">免费Clash SSR - 5月26日21.5M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-27-free-subscribe-node.htm" title="免费Clash SSR - 5月27日18.7M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 5月27日18.7M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-subscribe-node.htm" title="免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-2-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月2日20.1M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 6月2日20.1M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-7-free-high-speed-nodes.htm" title="免费Clash SSR - 6月7日22M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月7日22M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-23-free-high-speed-nodes.htm" title="免费Clash SSR - 5月23日18.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月23日18.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-3-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月3日20.7M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月3日20.7M/S|免费SSR/V2ray/Shadowrocket/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-5-node-share-links.htm" title="免费Clash SSR - 6月5日20.2M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 6月5日20.2M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
@@ -210,7 +211,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
